--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </button>
     <br>
     <button class="button two">
-        <a href="https://www.youtube.com/watch?v=YkLjqFpBh84">
+        <a href="https://www.youtube.com/watch?v=Wc5IbN4xw70">
             Come to have a wap
         </a>
     </button>
